--- a/spring5_demo1/src/jdbc.properties
+++ b/spring5_demo1/src/jdbc.properties
@@ -1,4 +1,4 @@
 prop.driverClass=com.mysql.jdbc.Driver
-prop.url=jdbc:mysql://localhost:3306/db02
+prop.url=jdbc:mysql://localhost:3306/userdb
 prop.userName=root
 prop.password=yonghuachen
