add jdbctemplate insert sql

--- a/spring5_demo1/src/jdbc.properties
+++ b/spring5_demo1/src/jdbc.properties
@@ -1,4 +1,4 @@
 prop.driverClass=com.mysql.jdbc.Driver
-prop.url=jdbc:mysql://localhost:3306/userdb
+prop.url=jdbc:mysql://127.0.0.1:3306/user_db?characterEncoding=latin1&useConfigs=maxPerformance
 prop.userName=root
-prop.password=yonghuachen
+prop.password=root
